[gd_scene load_steps=16 format=3 uid="uid://kp3ag6exrchi"]

[ext_resource type="PackedScene" uid="uid://e41uscdwo833" path="res://Painel - global/painel.tscn" id="1_p7imp"]
[ext_resource type="Script" path="res://activity/scripts/painel_activity.gd" id="2_fqmtk"]
[ext_resource type="Texture2D" uid="uid://chdudd6ypx4y" path="res://assets/buttons/Rectangle 65.png" id="3_qqucq"]
[ext_resource type="FontFile" uid="uid://x68u5rsd0n4f" path="res://assets/fonts/Bungee-Regular.ttf" id="6_rd41e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cx7jm"]
bg_color = Color(0.380392, 0.67451, 0.27451, 1)
corner_radius_top_left = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c0ij6"]
bg_color = Color(0.482353, 0.784314, 0.34902, 1)
corner_radius_top_left = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_07uqu"]
bg_color = Color(0.247059, 0.282353, 0.235294, 1)
corner_radius_top_left = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l355h"]
bg_color = Color(0.247059, 0.282353, 0.235294, 1)
corner_radius_top_left = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_eapo0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_un1wt"]
bg_color = Color(0.380392, 0.67451, 0.27451, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ct5du"]
bg_color = Color(0.482353, 0.784314, 0.34902, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jq2rx"]
bg_color = Color(0.247059, 0.282353, 0.235294, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wlsms"]
bg_color = Color(0.380392, 0.67451, 0.27451, 1)
corner_radius_top_right = 10
corner_radius_bottom_right = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ppcwp"]
bg_color = Color(0.482353, 0.784314, 0.34902, 1)
corner_radius_top_right = 10
corner_radius_bottom_right = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n6d2b"]
bg_color = Color(0.247059, 0.282353, 0.235294, 1)
corner_radius_top_right = 10
corner_radius_bottom_right = 10

[node name="painel_activity" instance=ExtResource("1_p7imp")]
script = ExtResource("2_fqmtk")

[node name="Rectangle65" type="Sprite2D" parent="." index="1"]
position = Vector2(432, 150)
scale = Vector2(1.2, 1.2)
texture = ExtResource("3_qqucq")

[node name="ScrollContainerGlobal" type="ScrollContainer" parent="." index="2"]
layout_mode = 0
offset_left = 175.0
offset_top = 248.0
offset_right = 992.0
offset_bottom = 538.0
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainerGlobal" index="0"]
custom_minimum_size = Vector2(10, 14500)
layout_mode = 2

[node name="ScrollContainerLocal" type="ScrollContainer" parent="." index="3"]
layout_mode = 0
offset_left = 175.0
offset_top = 248.0
offset_right = 992.0
offset_bottom = 538.0
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainerLocal" index="0"]
custom_minimum_size = Vector2(10, 14500)
layout_mode = 2

[node name="Button-global" type="Button" parent="." index="4"]
layout_mode = 0
offset_left = 407.0
offset_top = 202.0
offset_right = 517.0
offset_bottom = 237.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(0.835294, 0.835294, 0.835294, 1)
theme_override_fonts/font = ExtResource("6_rd41e")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_cx7jm")
theme_override_styles/hover = SubResource("StyleBoxFlat_c0ij6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_07uqu")
theme_override_styles/disabled = SubResource("StyleBoxFlat_l355h")
theme_override_styles/focus = SubResource("StyleBoxEmpty_eapo0")
toggle_mode = true
button_pressed = true
text = "Global"

[node name="Button-local" type="Button" parent="." index="5"]
layout_mode = 0
offset_left = 517.0
offset_top = 202.0
offset_right = 627.0
offset_bottom = 237.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(0.835294, 0.835294, 0.835294, 1)
theme_override_fonts/font = ExtResource("6_rd41e")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_un1wt")
theme_override_styles/hover = SubResource("StyleBoxFlat_ct5du")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jq2rx")
theme_override_styles/disabled = SubResource("StyleBoxFlat_jq2rx")
theme_override_styles/focus = SubResource("StyleBoxEmpty_eapo0")
toggle_mode = true
text = "Local"

[node name="Button-minhas" type="Button" parent="." index="6"]
layout_mode = 0
offset_left = 627.0
offset_top = 202.0
offset_right = 737.0
offset_bottom = 237.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(0.835294, 0.835294, 0.835294, 1)
theme_override_fonts/font = ExtResource("6_rd41e")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_wlsms")
theme_override_styles/hover = SubResource("StyleBoxFlat_ppcwp")
theme_override_styles/pressed = SubResource("StyleBoxFlat_n6d2b")
theme_override_styles/disabled = SubResource("StyleBoxFlat_n6d2b")
theme_override_styles/focus = SubResource("StyleBoxEmpty_eapo0")
toggle_mode = true
text = "Minhas"

[connection signal="pressed" from="Button-global" to="." method="_on_buttonglobal_pressed"]
[connection signal="pressed" from="Button-local" to="." method="_on_buttonlocal_pressed"]
[connection signal="pressed" from="Button-minhas" to="." method="_on_buttonminhas_pressed"]
